Fix horizontal layout overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -47,8 +48,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: -2;
   pointer-events: none;
 }
@@ -58,8 +59,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   border-left: 1px solid rgba(255, 255, 255, 0.01);
   border-right: 1px solid rgba(255, 255, 255, 0.01);
   pointer-events: none;
